# lua

./: .gitignore  CMakeLists.txt  DOT_NOTATION.md  GC_IMPLEMENTATION.md  Makefile  README.md  STDLIB_IMPLEMENTATION.md  TESTING_CONTEXT.md  TODO.md  fixgit.sh  output.txt  server_log.txt  test_output.txt  web_server.lua
docs/: COMPILER_PIPELINE.md  C_API.md  GC_IMPLEMENTATION.md  GEMINI.md  INDEX.md  JIT_COMPILATION_PLAN.md  REPL.md  STDLIB_IMPLEMENTATION.md  STDLIB_QUICKSTART.md  VALUE_REPRESENTATION.md  VM_ARCHITECTURE.md
examples/: STDLIB_QUICKSTART.md  dot_notation_demo.lua  stdlib_demo_simple.lua  test.lua  test_break_for.lua  test_break_nested.lua  test_break_while.lua  test_call_local_closure.lua  test_closure_nested.lua  test_closure_simple.lua  test_collectgarbage.lua  test_counter.lua  test_dot_notation.lua  test_for_basic.lua  test_for_comprehensive.lua  test_for_debug.lua  test_for_debug2.lua  test_for_edge.lua  test_for_in_range.lua  test_for_in_simple.lua  test_for_nested.lua  test_for_nostep.lua  test_for_simple.lua  test_for_step.lua  test_for_trace.lua  test_for_two.lua  test_function_define.lua  test_function_minimal.lua  test_function_params.lua  test_function_recursion.lua  test_function_simple.lua  test_if.lua  test_io.lua  test_io_clean.lua  test_io_debug.lua  test_local.lua  test_local_access.lua  test_local_closure.lua  test_math_bracket.lua  test_math_lib.lua  (+23 more)
lua-5.5.0-tests/: all.lua  main.lua  test_require_minimal.lua
src/: main.cpp
src/api/: lua.h  lua_api.cpp  lua_state.h
src/common/: common.cpp  common.hpp
src/compiler/: ast.hpp  chunk.cpp  chunk.hpp  codegen.cpp  codegen.hpp  lexer.cpp  lexer.hpp  lexer_string.cpp  parser.cpp  parser.hpp  parser_statement.cpp  token.hpp
src/value/: closure.cpp  closure.hpp  coroutine.cpp  coroutine.hpp  file.cpp  file.hpp  function.hpp  socket.cpp  socket.hpp  string.hpp  table.cpp  table.hpp  upvalue.cpp  upvalue.hpp  userdata.cpp  userdata.hpp  value.cpp  value.hpp
src/vm/: gc.cpp  gc.hpp  gc_impl.cpp  jit.cpp  jit.hpp  opcode.hpp  run_impl.cpp  stdlib_base.cpp  stdlib_coroutine.cpp  stdlib_debug.cpp  stdlib_io.cpp  stdlib_math.cpp  stdlib_os.cpp  stdlib_socket.cpp  stdlib_string.cpp  stdlib_table.cpp  stdlib_utf8.cpp  vm.cpp  vm.hpp
tests/: demo_multiple_assignment.lua  dummy_module.cpp  mymodule.lua  run_all_tests.sh  simple.lua  stdlib_demo.lua  temp_mod.lua  temp_tostring.lua  test_anon_func.lua  test_arg.lua  test_assert.lua  test_base_complete.lua  test_basic.lua  test_bitwise.lua  test_bracket_access.lua  test_break_error.lua  test_break_stack.lua  test_c_api.cpp  test_cli_flags.sh  test_close.lua  test_close_error.lua  test_close_error_escalation.lua  test_closure_three_simple.lua  test_closure_two_level.lua  test_collectgarbage.lua  test_concat_debug.lua  test_const.lua  test_control_flow.lua  test_coroutine.lua  test_coroutine_close.lua  test_coroutine_close_tbc.lua  test_coroutine_complete.lua  test_coroutine_complex.lua  test_coroutine_multi.lua  test_coroutines_advanced.lua  test_debug.lua  test_debug_complete.lua  test_debug_getinfo.lua  test_debug_traceback.lua  test_disasm_metadata.sh  (+117 more)
